chore: Update environment configuration, remove dev.sh, and enhance Docker setup

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ AUTH_ALGORITHM=HS256
 AUTH_ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # SMTP
-SMTP_HOST="smtp.yandex.ru"
-SMTP_PORT=465
-SMTP_USERNAME=example@mail.com
-SMTP_PASSWORD=password
+SMTP_HOST="mailcatcher"
+SMTP_PORT=1025
+SMTP_USERNAME=noreply@example.com
+SMTP_PASSWORD=
