--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_install_hook_types: [pre-commit, post-checkout, post-merge, commit-msg]
-exclude: "^(db/alembic|dev.sh)"
+exclude: "^(db/alembic)"
 repos:
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v4.0.0
@@ -9,7 +9,7 @@ repos:
         args:
           [
             --scopes,
-            "api,constants,db,enums,exceptions,helpers,repositories,schemas,settings,usecases",
+            "api,db,settings,usecases",
             --strict,
             feat,
             fix,
