--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ select = [
     "FURB", # refurb
     "FAST", # FastAPI
 ]
-exclude = ["db/alembic/versions/*.py", "db/alembic/env.py", "helpers/*.py"]
+exclude = ["db/alembic/versions/*.py", "db/alembic/env.py"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*.py" = [
