--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ pytest-asyncio = "*"
 pytest-cov = "*"
 factory-boy = "*"
 faker = "*"
-aiosqlite = "*"
+asyncpg = "*"
+testcontainers = { extras = ["postgresql"], version = "*" }
 
 [tool.black]
 line-length = 88
