feat: Add permission management features including new PermissionUsecase, schemas, and routes; integrate logging and enhance user update functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,15 @@ services:
       timeout: 5s
       retries: 5
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+
   redis:
     image: redis:8.2.1
     restart: always
